syntax="proto3";
option java_multiple_files = true;
option java_package = "cn.atali.usercenter";
option java_outer_classname = "ProjectProto";
option objc_class_prefix = "PROJECTSRV";
package usercenter;
option go_package = "./;usercenter";

import "common.proto";

service Project{
    rpc Add(ProjectInfo)returns(CommonResponse){}
    rpc Update(ProjectInfo)returns(CommonResponse){}
    rpc Delete(DelRequest)returns(CommonResponse){}
    rpc Query(QueryProjectRequest)returns(QueryProjectResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetProjectDetailResponse){}
    rpc Export(CommonExportRequest)returns(CommonExportResponse){}
}

message ProjectInfo {
    string id=1;
	string tenantID=2;
	string name=3;
	int32 formCount=4;
	int32 pageCount=5;
	string expired=6;
	string description=7;
	int32 cellCount=8;
	repeated ProjectFormComponent formComponents=9;
    //系统必须要有的数据
    bool isMust=10;
}

message ProjectFormComponent {
    string id=1;
	string projectID=2;
	string name=3;
} 

message QueryProjectRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"orderField" form:"orderField"
    string orderField=3;
    // @inject_tag: uri:"desc" form:"desc"
    bool desc=4;
    // @inject_tag: uri:"tenantID" form:"tenantID"
    string tenantID=5;
    // @inject_tag: uri:"name" form:"name"
    string name=6;
    // @inject_tag: uri:"isMust" form:"isMust"
    bool isMust=7;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=8;
    // @inject_tag: uri:"ids" form:"ids"
    repeated string ids=9;
}

message QueryProjectResponse{
    Code code=1;
    string message=2;
    repeated ProjectInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetProjectDetailResponse{
    Code code=1;
    string message=2;
    ProjectInfo data=3;
}